[package]
name = "stainless_pm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.9.4"
argon2 = "0.3.1"
rand = "0.8.4"
chrono = "0.4.19"
pad = "0.1.6"
sysinfo = "0.20.3"

# Not used since the Crates.io version is not up-to-date
#slpm-file = "0.1.0"

# OS specific local imports thanks to local developement
[target.'cfg(unix)'.dependencies]
slpm-file = { path = "/home/flareflo/CLionProjects/slpm-file"}

[target.'cfg(windows)'.dependencies]
#slpm-file = { path = "C:\\Users\\flori\\CLionProjects\\slpm-file"}